css/main.css
/* ... */
@media screen and (max-width:770px) {
  #main-space-content .post-list p.post-description {
    margin-left: 0;
  }

  .post-list .post-element .post-meta { 
    float: none;
  }

  #social-links li {
    margin-right: 16px;
  }

  .technologies img {
    margin-right: 15px;
  }

  #main-space h3.check-on-blog {
    text-align: center;
    padding-left: 0;
    padding-right: 0;
  }
}

/* Tags */

.tag-page {
  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
}

.tag-page a {
  font-weight: bold;
}

.tags {
  text-align: left;
  margin-top: 10px;
  margin-bottom: 20px;
}

.tags span {
  background-color: rgba(100,100,100,0.1);
  padding: 5px;
  border-radius: 3px;
}

.tags span:hover {
  background-color: rgb(100,150,150,0.4);
}

#main-space .tags a,
#main-space .tags a:hover,
#main-space .tags a:link,
#main-space .tags a:visited {
  text-decoration: none;
  border: 0;
  color: black;
  font-weight: normal;
  font-size: 80%;
}

#main-space .tag-page a:hover {
    color: #222;
    text-decoration: none;
    border-bottom: 1px solid #222;
}

/* Highlighting */

/** Blockquotes */
blockquote { 
  color: #828282; 
  border-left: 4px solid #e8e8e8; 
  padding-left: 15px; 
  font-size: 18px; 
  letter-spacing: 1px; 
  font-style: italic; 
  margin-left: 20px;
  font-weight: 200;
}

blockquote p {
  text-align: left;
  color: #828282;
}

blockquote > :last-child { 
  margin-bottom: 0; 
}

/** Code formatting */
pre, code { 
  font-size: 12px; 
  border: 1px solid #e8e8e8; 
  border-radius: 3px; 
  background-color: #eef; 
  font-size: 100%;
}

code { padding: 1px 5px; }

code {
  font-family: Menlo, Monaco, Courier;
}

pre { padding: 8px 12px; overflow-x: auto; }
pre > code { border: 0; padding-right: 0; padding-left: 0; }

.highlighter-rouge {
  margin-top: 10px;
  margin-bottom: 10px;
}

/** Syntax highlighting styles */
.highlight { background: #fff; }
.highlighter-rouge .highlight { background: #eef; }
.highlight .c { color: #998; font-style: italic; }
.highlight .err { color: #a61717; background-color: #e3d2d2; }
.highlight .k { font-weight: bold; }
.highlight .o { font-weight: bold; }
.highlight .cm { color: #998; font-style: italic; }
.highlight .cp { color: #999; font-weight: bold; }
.highlight .c1 { color: #998; font-style: italic; }
.highlight .cs { color: #999; font-weight: bold; font-style: italic; }
.highlight .gd { color: #000; background-color: #fdd; }
.highlight .gd .x { color: #000; background-color: #faa; }
.highlight .ge { font-style: italic; }
.highlight .gr { color: #a00; }
.highlight .gh { color: #999; }
.highlight .gi { color: #000; background-color: #dfd; }
.highlight .gi .x { color: #000; background-color: #afa; }
.highlight .go { color: #888; }
.highlight .gp { color: #555; }
.highlight .gs { font-weight: bold; }
.highlight .gu { color: #aaa; }
.highlight .gt { color: #a00; }
.highlight .kc { font-weight: bold; }
.highlight .kd { font-weight: bold; }
.highlight .kp { font-weight: bold; }
.highlight .kr { font-weight: bold; }
.highlight .kt { color: #458; font-weight: bold; }
.highlight .m { color: #099; }
.highlight .s { color: #d14; }
.highlight .na { color: #008080; }
.highlight .nb { color: #0086B3; }
.highlight .nc { color: #458; font-weight: bold; }
.highlight .no { color: #008080; }
.highlight .ni { color: #800080; }
.highlight .ne { color: #900; font-weight: bold; }
.highlight .nf { color: #900; font-weight: bold; }
.highlight .nn { color: #555; }
.highlight .nt { color: #000080; }
.highlight .nv { color: #008080; }
.highlight .ow { font-weight: bold; }
.highlight .w { color: #bbb; }
.highlight .mf { color: #099; }
.highlight .mh { color: #099; }
.highlight .mi { color: #099; }
.highlight .mo { color: #099; }
.highlight .sb { color: #d14; }
.highlight .sc { color: #d14; }
.highlight .sd { color: #d14; }
.highlight .s2 { color: #d14; }
.highlight .se { color: #d14; }
.highlight .sh { color: #d14; }
.highlight .si { color: #d14; }
.highlight .sx { color: #d14; }
.highlight .sr { color: #009926; }
.highlight .s1 { color: #d14; }
.highlight .ss { color: #990073; }
.highlight .bp { color: #999; }
.highlight .vc { color: #008080; }
.highlight .vg { color: #008080; }
.highlight .vi { color: #008080; }
.highlight .il { color: #099; }

/* Tooltip */

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  width: 90px;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 3px;
  padding: 5px 0 3px 0;
  font-size: 11px;
  text-shadow: 0 1px rgb(20, 20, 20);
  
  /* Position the tooltip */
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -45px;
  margin-top: 10px;
  opacity: 0.9;
}

.tooltip .tooltiptext::after {
  content: " ";
  position: absolute;
  bottom: 100%;  /* At the top of the tooltip */
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

@media screen and (max-width:770px) {
  .tooltiptext {
    display: none;
  }
}
/* ... */

